# m2t2_ros

./: .gitignore  CMakeLists.txt  README.md  config.yaml  package.xml
msg/: GraspCandidate.msg  GraspCandidates.msg
scripts/: m2t2_model.py  m2t2_node.py  m2t2_service.py
srv/: GraspPrediction.srv
