<?xml version="1.0"?>
<package format="2">
  <name>m2t2_ros</name>
  <version>0.1.0</version>
  <description>ROS wrapper for M2T2</description>

  <maintainer email="abhayd@allenai.org">Abhay Deshpande</maintainer>
  <author email="abhayd@allenai.org">Abhay Deshpande</author>
  <license>MIT</license>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
